--- a/ur5e_egp50_moveit_config/config/controllers.yaml
+++ b/ur5e_egp50_moveit_config/config/controllers.yaml
@@ -1,6 +1,17 @@
+# controller_list:
+#   - name: ""
+#     action_ns: scaled_pos_traj_controller/follow_joint_trajectory
+#     type: FollowJointTrajectory
+#     joints:
+#       - shoulder_pan_joint
+#       - shoulder_lift_joint
+#       - elbow_joint
+#       - wrist_1_joint
+#       - wrist_2_joint
+#       - wrist_3_joint
 controller_list:
   - name: ""
-    action_ns: scaled_pos_traj_controller/follow_joint_trajectory
+    action_ns: follow_joint_trajectory
     type: FollowJointTrajectory
     joints:
       - shoulder_pan_joint
@@ -9,3 +20,6 @@ controller_list:
       - wrist_1_joint
       - wrist_2_joint
       - wrist_3_joint
+initial:
+  - group: manipulator
+    pose: home  
